src/test/deca/context/valid/provided/BooleanRValue.deca
// DESCRIPTION :Iinitialisation d'un boolean avec une epxression booléenne
{
    boolean a = true;
    boolean b = false;
    boolean c = (a == b);
}
