src/test/deca/context/invalid/provided/readFloat.deca
// DESCRIPTION : readfloat d'un boolean
{
    boolean a = readFloat();
}
